ingress-example/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: mysite-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysite-nginx-service
            port: 
              number: 80
